--- a/sources/subject/view.html
+++ b/sources/subject/view.html
@@ -27,7 +27,10 @@
           <h3>工具简介</h3>
           <el-row>
             <el-col :span="4">
-              <div class="grid-content tool-ico"><img class="logo" src="../assets/cd-logo.png"></div>
+              <div class="grid-content tool-ico">
+                <img v-show="current_item.icon === null" class="logo" src="../assets/cd-logo.png">
+                 <img  v-show="current_item.icon !== null" class="logo" :src="current_item.icon">
+              </div>
             </el-col>
             <el-col :span="8">
               <div class="grid-content">
