--- a/sources/interaction/container/serviceRequest/view.html
+++ b/sources/interaction/container/serviceRequest/view.html
@@ -1,6 +1,6 @@
 <main id="service-request">
   <p class="title_des">用户手册</p>
   <ul>
-    <li v-bind:href="guideUrl">用户手册</li>
+    <li><a v-bind:href="guideUrl">用户手册</a></li>
   </ul>
 </main>
