--- a/sources/catalog/system-dynamic-resources/view.html
+++ b/sources/catalog/system-dynamic-resources/view.html
@@ -13,33 +13,41 @@
       </div>
     </div>
     <el-table :data="tableData" border style="width: 100%" v-loading="loading" element-loading-text="数据加载中" slot="empty" highlight-current-row>
-      <el-table-column prop="enName" label="表英文名" >
+      <!-- <el-table-column prop="enName" label="表英文名" >
         <template scope="scope">
           <span v-bind:title="scope.row.enName">{{ scope.row.enName }}</span>
         </template>
-      </el-table-column>
-      <el-table-column prop="cnName" label="表中文名" >
+      </el-table-column> -->
+      <el-table-column label="表名">
         <template scope="scope">
-          <span v-bind:title="scope.row.cnName">{{ scope.row.cnName }}</span>
+          <div class="over_space">
+            <span v-bind:title="scope.row.enName">{{ scope.row.enName }}</span>&nbsp;
+            <span v-if="scope.row.cnName !==null || scope.row.cnName !==''" v-bind:title="scope.row.cnName">[{{ scope.row.cnName }}]</span>
+          </div>
+        </template>
+      </el-table-column>>
+      <el-table-column prop="table_type" label="类型" width="80">
+        <template scope="scope">
+          <div class="over_space">
+            <span v-bind:title="scope.row.table_type">{{ scope.row.table_type }}</span>
+          </div>
         </template>
       </el-table-column>
-      <el-table-column prop="table_type" label="类型" >
+      <el-table-column prop="table_source_type" label="来源">
         <template scope="scope">
-          <span v-bind:title="scope.row.table_type">{{ scope.row.table_type }}</span>
+          <div class="over_space">
+            <span v-bind:title="scope.row.table_source_type">{{ scope.row.table_source_type }}</span>
+          </div>
         </template>
       </el-table-column>
-      <el-table-column prop="table_source_type" label="来源" >
-        <template scope="scope">
-          <span v-bind:title="scope.row.table_source_type">{{ scope.row.table_source_type }}</span>
+      <el-table-column label="详情" width="80">
+        <template slot-scope="scope">
+          <el-button @click="handleCurrentChange(scope.row)" type="text" size="small">查看</el-button>
         </template>
       </el-table-column>
-       <el-table-column label="详情" width="80">
-          <template slot-scope="scope">
-            <el-button @click="handleCurrentChange(scope.row)" type="text" size="small">查看</el-button>
-          </template>
-        </el-table-column>
     </el-table>
-    <el-pagination @current-change="handlePageChange" :current-page="currentPage" :page-size="20" layout="total, prev, pager, next, jumper" :total="totalResource">
+    <el-pagination @current-change="handlePageChange" :current-page="currentPage" :page-size="20" layout="total, prev, pager, next, jumper"
+      :total="totalResource">
     </el-pagination>
-  </div>
+    </div>
 </main>
