--- a/sources/catalog/system-details/view.html
+++ b/sources/catalog/system-details/view.html
@@ -47,7 +47,7 @@
             :total="totalResource">
           </el-pagination>
         </el-tab-pane>
-         <el-tab-pane label="关联资源" name="interfaceinfo">
+         <!-- <el-tab-pane label="关联资源" name="interfaceinfo">
           <el-table :data="tableInterfaces" border style="width: 100%" tooltip-effect="dark" v-loading="loading2" element-loading-text="数据加载中">
                        <el-table-column label="所属目录">
               <template scope="scope">
@@ -63,13 +63,6 @@
                 </div>
               </template>
             </el-table-column>
-            <!-- <el-table-column label="接口状态">
-              <template scope="scope">
-                <div class="over_space">
-                  <span v-bind:title="scope.row.column_desc">{{scope.row.column_desc}}</span>
-                </div>
-              </template>
-						</el-table-column> -->
 						<el-table-column label="是否收藏">
               <template scope="scope">
                 <div class="over_space">
@@ -84,20 +77,7 @@
                 </div>
               </template>
 						</el-table-column>
-						<!-- <el-table-column label="评分">
-              <template scope="scope">
-                <div class="over_space">
-                  <span v-bind:title="scope.row.column_desc">{{scope.row.column_desc}}</span>
-                </div>
-              </template>
-						</el-table-column> -->
-							<!-- <el-table-column label="是否申请">
-              <template scope="scope">
-                <div class="over_space">
-                  <span v-bind:title="scope.row.column_desc">{{scope.row.column_desc}}</span>
-                </div>
-              </template>
-						</el-table-column> -->
+					
 							<el-table-column label="审核结果">
               <template scope="scope">
                 <div class="over_space">
@@ -111,7 +91,7 @@
           </template>
         </el-table-column>
           </el-table>
-        </el-tab-pane> 
+        </el-tab-pane>  -->
       </el-tabs>
     </div>
   </div>
