--- a/sources/catalog/depCardingCatalog/department-resources/view.html
+++ b/sources/catalog/depCardingCatalog/department-resources/view.html
@@ -5,7 +5,8 @@
 			<div class="other-info">
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;共 {{totalResource}} 个项业务</div>
 		</div> -->
-  <div class="search-box" :style="showStyle" ref="search">
+  <!-- <div class="search-box" :style="showStyle" ref="search"> -->
+     <div class="search-box"  ref="search">
     <div class="total-num">共 <span class="count">{{totalResource}}</span> 条结果</div>
     <div class="search-input">
       <el-input placeholder="请输入业务事项" v-model="keyword">
@@ -13,7 +14,8 @@
       </el-input>
     </div>
   </div>
-  <div :style="showStyle" ref="business">
+  <!-- <div :style="showStyle" ref="business"> -->
+    <div ref="business">
     <el-table :data="tableData" border style="width: 100%" v-loading="loading" element-loading-text="数据加载中" slot="empty" highlight-current-row
       @current-change="handleCurrentChange">
       <el-table-column label="业务事项">
