--- a/sources/interaction/container/view.html
+++ b/sources/interaction/container/view.html
@@ -1,3 +1,3 @@
 <main id="interaction-container">
-  <router-view class="router-layout"></router-view>
+  <router-view class="router-layout" :key="key"></router-view>
 </main>
