--- a/sources/dashboard/view.html
+++ b/sources/dashboard/view.html
@@ -16,7 +16,7 @@
         <div id="resource_count">
           <span>资源总数:<i id="resourceCount">{{countDataShare.directoryCount}}</i></span>
           <span>本周新增:<i id="thisWeekAddCount">{{countDataShare.thisWeekAddCount}}</i></span>
-          <span>访问总数:<i id="serviceCallCount">{{countDataShare.serviceCallCount}}</i></span>
+          <span>访问总数:<i id="serviceCallCount">{{countDataShare.dirDataRescourceVisitCount}}</i></span>
         </div>
       </div>
       <div class="search" @keyup.enter="searchKeywords($event)">
