48268【数据目录】【部门政务信息梳理目录】业务、系统、需求目录按字母筛选

--- a/sources/catalog/depCardingCatalog/view.html
+++ b/sources/catalog/depCardingCatalog/view.html
@@ -8,11 +8,7 @@
             <td class="title">首字母：</td>
             <td>
               <ul class="data-ul">
-                <li>全部</li>
-                <li>A-G</li>
-                <li>H-N</li>
-                <li>O-T</li>
-                <li>U-Z</li>
+                <li v-for="pingYing in pingYingList" :class="{ active: (current_pingYing === pingYing.name) }" @click="getDep(pingYing)">{{pingYing.name}}</li>
               </ul>
             </td>
             <td></td>
