登录样式，部门政务信息梳理目录下的字母过滤功能

--- a/sources/catalog/economy-extend-resourses/view.html
+++ b/sources/catalog/economy-extend-resourses/view.html
@@ -32,7 +32,7 @@
      <div class="content">
     <div class="search-box">
       <div class="total-num">共 <span class="count">{{totalResource}}</span> 条结果</div>
-       <div class="info"> {{itemCount}} 个资源&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;共 {{totalResource}}个处室</div>
+       <!-- <div class="info"> {{itemCount}} 个资源&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;共 {{totalResource}}个处室</div> -->
       <div class="search-input">
         <el-input placeholder="请输入信息资源名称" v-model="keyword">
           <el-button slot="append" icon="search" @click="handleSearch">搜索</el-button>
