--- a/sources/login/view.html
+++ b/sources/login/view.html
@@ -17,7 +17,7 @@
   <form class="form-horizontal">
     <div class="inputdiv reg-box">
       <span class="spanuser">
-      <img src="../assets/login/Username.png"/>
+      <img class="img" src="../assets/login/Username.png"/>
       </span><input type="text" v-model="username" class="account" name="username" placeholder="用户名" />
     </div>
     <div class="inputdiv reg-box">
