隐藏静态资源目录下的更新时间

--- a/sources/catalog/system-details/view.html
+++ b/sources/catalog/system-details/view.html
@@ -17,10 +17,10 @@
           <td>来源</td>
           <td>{{detail_pro.table_source_type}}</td>
         </tr>
-        <tr class="">
+        <!-- <tr class="">
           <td>更新时间</td>
           <td>{{detail_pro.table_updateTime| formatDate}}</td>
-        </tr>
+        </tr> -->
       </tbody>
     </table>
     <div class="item-content">
