--- a/sources/interaction/container/hotMessage/view.html
+++ b/sources/interaction/container/hotMessage/view.html
@@ -196,7 +196,7 @@
     </el-tabs>
   </nav>
   <div class="search">
-    <el-input placeholder="请输入" icon="search" v-model='inp_seach' :on-icon-click="searchClick">
+    <el-input placeholder="请输入名称" icon="search" v-model='inp_seach' :on-icon-click="searchClick">
     </el-input>
   </div>
 </main>
