--- a/sources/catalog/view.html
+++ b/sources/catalog/view.html
@@ -7,11 +7,22 @@
     </aside>
       <router-view class="router-catalog" :key="key"></router-view>  
   </div>
-   <section class="float-profile">
+   <section class="float-profile ">
+     <div class="shengma">
     <a v-bind:href="sysObj.xuanfu1" class="share-link" target="_blank"><img src="../assets/ico/share.png" /><p>共享</p></a>
     <ul class="other-link">
       <li><a v-bind:href="sysObj.xuanfu2" class="share-link" target="_blank"><img src="../assets/ico/open.png" /></a><p>开放</p></li>
       <li><a v-bind:href="sysObj.xuanfu3" class="share-link" target="_blank"><img src="../assets/ico/theme.png" /></a><p>主题</p></li>
     </ul>
+     </div>
+  </section>
+  <section class="float-profile ">
+    <div class="ruanzhong">
+    <a v-bind:href="sysObj.xuanfu1" class="share-link" target="_blank"><img src="../assets/dashboard/tool1.png" /><p>目录管理</p></a>
+    <ul class="other-link">
+      <li><a v-bind:href="sysObj.xuanfu2" class="share-link" target="_blank"><img src="../assets/dashboard/tool2.png" /></a><p>服务封装</p></li>
+      <li><a v-bind:href="sysObj.xuanfu3" class="share-link" target="_blank"><img src="../assets/dashboard/tool3.png" /></a><p>资源梳理</p></li>
+    </ul>
+    </div>
   </section>  
 </main>
