--- a/sources/interaction/container/interactionAdvice/view.html
+++ b/sources/interaction/container/interactionAdvice/view.html
@@ -56,7 +56,7 @@
     <el-row>
       <el-col :span="14" :offset="1">
         <el-form-item>
-          <el-button type="primary" @click="submitForm('ruleForm')">提交</el-button>
+          <el-button type="primary" :disabled="disable" @click="submitForm('ruleForm')">提交</el-button>
         </el-form-item>
       </el-col>
     </el-row>
