--- a/sources/searchPage/view.html
+++ b/sources/searchPage/view.html
@@ -60,7 +60,7 @@
               </div>
                  <div v-if="subjectData.length == 0" class="empty">暂无数据</div>
               <div class="page">
-                <el-pagination @current-change="handlePageChangeSubject" layout="total, prev, pager, next, jumper" :total="totalR">
+                <el-pagination @current-change="handlePageChangeSubject" layout="total, prev, pager, next, jumper" :total="totalR2">
                 </el-pagination>
               </div>
                </div>
@@ -84,7 +84,7 @@
               </div>
                <div v-if="developerData.length == 0" class="empty">暂无数据</div>
               <div class="page">
-                <el-pagination @current-change="handlePageChangeDeveloper" layout="total, prev, pager, next, jumper" :total="totalR">
+                <el-pagination @current-change="handlePageChangeDeveloper" layout="total, prev, pager, next, jumper" :total="totalR3">
                 </el-pagination>
               </div>
                </div>
