--- a/sources/catalog/details/view.html
+++ b/sources/catalog/details/view.html
@@ -179,7 +179,7 @@
     </el-form>
     <div slot="footer" class="dialog-footer">
       <el-button @click="dialogFormVisible = false">取 消</el-button>
-      <el-button type="primary" @click="handleCorrection()">提 交</el-button>
+      <el-button type="primary" :disabled="disable" @click="handleCorrection()">提 交</el-button>
     </div>
   </el-dialog>
   <!--评分对话框-->
@@ -190,7 +190,7 @@
       </el-form-item>
     </el-form>
     <div slot="footer" class="dialog-footer">
-      <el-button type="primary" @click="handleRating()">提 交</el-button>
+      <el-button type="primary" :disabled="disable" @click="handleRating()">提 交</el-button>
     </div>
   </el-dialog>
   <!--申请数据-->
@@ -214,7 +214,7 @@
     <div slot="footer" class="dialog-footer">
       <div class="pull-left" style="color:#5F98FB;">文件格式：XLS、XML、JSON、CSV</div>
       <el-button @click="dialogApplyVisible = false">取 消</el-button>
-      <el-button type="primary" @click="handleApply('applyForm')">完 成</el-button>
+      <el-button type="primary" :disabled="disable" @click="handleApply('applyForm')">完 成</el-button>
     </div>
   </el-dialog>
 </main>
