--- a/sources/catalog/view.html
+++ b/sources/catalog/view.html
@@ -22,7 +22,7 @@
   </section>
   <section class="float-profile ">
     <div class="ruanzhong">
-    <a href="javascript:void(0)" @click="getLoginUserInfo(jumpSystem.jump_directory)" class="share-link">
+    <a href="javascript:void(0);" @click="getLoginUserInfo(jumpSystem.jump_directory)" class="share-link">
         <img src="../assets/dashboard/tool1.png" /><p>目录管理</p></a>
         <ul class="other-link">
           <li @click="getLoginUserInfo(jumpSystem.jump_service)"><a href="javascript:void(0)" class="share-link">
