--- a/sources/dashboard/view.html
+++ b/sources/dashboard/view.html
@@ -4,7 +4,7 @@
     <template>
       <el-carousel :interval="5000" arrow="always">
         <el-carousel-item v-for="pic in porjectPic" :key="pic.id">
-          <a href="javascript:void(0)">
+          <a href=javascript:void(0);>
             <img v-bind:src="pic.pic_path" alt="轮播图" height="420" width="100%">
           </a>
         </el-carousel-item>
@@ -270,7 +270,7 @@
         <a class="m-l-0" v-bind:href="sysObj.datamap4" target="_blank"><img src="../assets/dashboard/map4.png" /></a>
         <a v-bind:href="sysObj.datamap5" target="_blank" class="m-r-0"> <img src="../assets/dashboard/map5.png" /></a>
       </div>
-      <section>
+      <section v-if="getDevelopApisData.length">
         <div class="main-title">
           <h4 class="title">
             工具
@@ -283,7 +283,7 @@
         </div>
         <div class="tool-content">
           <dl class="img-group m-l-0" v-for="tool_item in getDevelopApisData">
-            <a href="javascript:viod(0)" @click="getDevelopJump(tool_item.api_url)">
+            <a href="javascript:void(0);" @click="getDevelopJump(tool_item.api_url)">
                <dt v-if="tool_item.icon" class="in-block"><img :src="tool_item.icon" /></dt> 
               <dt v-else class="in-block"><img src="../assets/dashboard/tool1.png" /></dt>
               <dd class="des">{{tool_item.api_name}}</dd>
