应用需求反馈

--- a/sources/interaction/container/interactionRequireSurvey/view.html
+++ b/sources/interaction/container/interactionRequireSurvey/view.html
@@ -81,13 +81,13 @@
   </el-form-item>
   </el-col>
   </el-row>
-  <el-row>
+  <!-- <el-row>
     <el-col :span="16" :offset="1">
       <el-form-item label="需求描述" prop="content">
         <el-input type="textarea" v-model="ruleForm.content"></el-input>
       </el-form-item>
     </el-col>
-  </el-row>
+  </el-row> -->
   <el-row>
     <el-col :span="16" :offset="1">
       <el-form-item label="个人资料" label-suffix="sfdfsd">
