--- a/sources/catalog/depCardingCatalog/department-resources/view.html
+++ b/sources/catalog/depCardingCatalog/department-resources/view.html
@@ -29,8 +29,7 @@
  
   <!-- <div :style="showStyle" ref="business"> -->
     <div ref="business">
-    <el-table :data="tableData" border style="width: 100%" v-loading="loading" element-loading-text="数据加载中" slot="empty" highlight-current-row
-      @current-change="handleCurrentChange">
+    <el-table :data="tableData" border style="width: 100%" v-loading="loading" element-loading-text="数据加载中" slot="empty" highlight-current-row>
       <el-table-column label="业务事项">
         <template scope="scope">
           <div class="over_space">
