表名：表英文名【表中文名】

--- a/sources/catalog/system-dynamic-resources/view.html
+++ b/sources/catalog/system-dynamic-resources/view.html
@@ -22,7 +22,9 @@
         <template scope="scope">
           <div class="over_space">
             <span v-bind:title="scope.row.enName">{{ scope.row.enName }}</span>&nbsp;
-            <span v-if="scope.row.cnName !==null || scope.row.cnName !==''" v-bind:title="scope.row.cnName">[{{ scope.row.cnName }}]</span>
+            <span v-if="scope.row.enName != null && scope.row.cnName != null">[</span>
+            <span v-if="scope.row.cnName != null" v-bind:title="scope.row.cnName">{{ scope.row.cnName }}</span>
+            <span  v-if="scope.row.enName != null && scope.row.cnName != null">]</span>
           </div>
         </template>
       </el-table-column>>
