--- a/sources/interaction/container/interactionRequireSurvey/view.html
+++ b/sources/interaction/container/interactionRequireSurvey/view.html
@@ -29,7 +29,7 @@
                 <el-form-item label="部门" prop="depId" label-suffix="sfdfsd">
                   <el-dropdown trigger="click" style="width:100%">
                     <span class="el-dropdown-link"  v-bind:title="depName">
-                <input type="text" v-model="depName" class="el-input__inner" >
+                <input type="text" v-model="depName" class="el-input__inner" @click="PdepData()">
                  </span>
                     <el-dropdown-menu slot="dropdown" style="min-width:300px;max-height:300px;overflow: auto">
                       <el-tree :data="depData" :props="props" :render-content="renderContent"  :load="loadNode" lazy accordion @node-click="handleNodeClick" highlight-current></el-tree>
@@ -65,7 +65,7 @@
   <el-row v-if="resourceSwitch">
     <el-col :span="23" :offset="1">
       <el-form-item label="资源名称" prop="resourceId" label-suffix="sfdfsd">
-        <el-select value-key="id" v-model="ruleForm.resourceId" multiple placeholder="请选择" @visible-change="visibleChange">
+        <el-select value-key="id" v-model="ruleForm.resourceId" multiple placeholder="请选择"  :loading="loading" @visible-change="visibleChange">
           <el-option v-for="item in options" :key="item.id" :label="item.name" :value="item">
           </el-option>
         </el-select>
