应用需求反馈字段的更改

--- a/sources/interaction/container/interactionRequireSurvey/view.html
+++ b/sources/interaction/container/interactionRequireSurvey/view.html
@@ -4,7 +4,7 @@
     <el-form :model="ruleForm" :rules="rules2" ref="ruleForm" label-width="110px" class="demo-ruleForm">
       <el-row>
         <el-col :span="16" :offset="1">
-          <el-form-item label="应用需求名称" prop="title" label-suffix="sfdfsd">
+          <el-form-item label="需求名称" prop="title" label-suffix="sfdfsd">
             <el-input v-model="ruleForm.title"></el-input>
           </el-form-item>
         </el-col>
