--- a/sources/common/login-dialog/view.html
+++ b/sources/common/login-dialog/view.html
@@ -14,7 +14,7 @@
         <img src="../../assets/login/Password.png"/>
        </span><input type="password" v-model="password" class="admin_pwd" name="password" placeholder="密码" />
     </div>
-    <span v-show="errorShow" class="error">用户名或密码错误，请重新输入!</span>
+    <span v-show="errorShow" class="error">{{errorMessage}}</span>
   </form>
   <span slot="footer" class="dialog-footer">
     <el-button @click="dialogLoginVisible = false">取 消</el-button>
