--- a/sources/developer/view.html
+++ b/sources/developer/view.html
@@ -44,6 +44,9 @@
             </el-col>
           </el-row>
         </div>
+        <div v-show="!showLinkDom">
+            无数据
+        </div>
       </el-tab-pane>
     </el-tabs>
   </div>
