--- a/sources/interaction/container/hotMessage/view.html
+++ b/sources/interaction/container/hotMessage/view.html
@@ -9,7 +9,8 @@
               <el-table-column label="信息资源名称" width="180">
                 <template scope="scope">
                   <div class="over_space">
-                    <span v-bind:title="scope.row.TABLE_NAME">{{scope.row.TABLE_NAME}}</span>
+                     <p class="name" v-if="item.TABLE_CN_NAME"><span v-bind:title="item.TABLE_CN_NAME">{{item.TABLE_CN_NAME}}</span></p>
+                      <p class="name" else><span v-bind:title="item.TABLE_NAME">{{item.TABLE_NAME}}</span></p>
                   </div>
                 </template>
               </el-table-column>
@@ -54,7 +55,8 @@
               <el-table-column label="信息资源名称" width="180">
                 <template scope="scope">
                   <div class="over_space">
-                    <span v-bind:title="scope.row.TABLE_NAME">{{scope.row.TABLE_NAME}}</span>
+                     <p class="name" v-if="item.TABLE_CN_NAME"><span v-bind:title="item.TABLE_CN_NAME">{{item.TABLE_CN_NAME}}</span></p>
+                      <p class="name" else><span v-bind:title="item.TABLE_NAME">{{item.TABLE_NAME}}</span></p>
                   </div>
                 </template>
               </el-table-column>
