BUG #49778 【部门政务信息梳理目录】【业务、需求、系统目录】按首字母筛选，筛选失败，全显示的0个记录；

--- a/sources/catalog/depCardingCatalog/view.html
+++ b/sources/catalog/depCardingCatalog/view.html
@@ -8,7 +8,7 @@
             <td class="title">首字母：</td>
             <td>
               <ul class="data-ul">
-                <li v-for="pingYing in pingYingList" :class="{ active: (current_pingYing === pingYing.name) }" @click="getDep(pingYing)">{{pingYing.name}}</li>
+                <li v-for="pingYing in pingYingList" :class="{ active: (current_pingYingName === pingYing.name) }" @click="getDep(pingYing)">{{pingYing.name}}</li>
               </ul>
             </td>
             <td></td>
