门户】-【数据目录】--信息资源类型的图标显示（电子表格、数据库等，参考之前老版本的展示），并且已经做了服务封装的信息资源在“详情”列，“查看”文字前加实心圆点（绿色表示已经做了服务封装、灰色表示未做服务封装【已发布为准】）

--- a/sources/dashboard/view.html
+++ b/sources/dashboard/view.html
@@ -211,7 +211,7 @@
                 <ul class="list-group">
                   <li v-for="item in listLatestDbResource" @click="jumpDetailResource(item)">
                       <p class="name" v-if="item.TABLE_CN_NAME"><span v-bind:title="item.TABLE_CN_NAME">{{item.TABLE_CN_NAME}}</span></p>
-                      <p class="name" else><span v-bind:title="item.TABLE_NAME">{{item.TABLE_NAME}}</span></p>
+                      <p class="name" v-else><span v-bind:title="item.TABLE_NAME">{{item.TABLE_NAME}}</span></p>
                       <p class="dep" ><span v-bind:title="item.dept_name">{{item.dept_name}}</span></p>
                   </li>
                 </ul>
@@ -233,7 +233,7 @@
                 <ul class="list-group">
                   <li v-for="item in listHottestResource" @click="jumpDetailResource(item)">
                        <p class="name" v-if="item.TABLE_CN_NAME"><span v-bind:title="item.TABLE_CN_NAME">{{item.TABLE_CN_NAME}}</span></p>
-                      <p class="name" else><span v-bind:title="item.TABLE_NAME">{{item.TABLE_NAME}}</span></p>
+                      <p class="name" v-else><span v-bind:title="item.TABLE_NAME">{{item.TABLE_NAME}}</span></p>
                       <p class="dep" ><span v-bind:title="item.dept_name">{{item.dept_name}}</span></p>
                   </li>
                 </ul>
