--- a/sources/index.html
+++ b/sources/index.html
@@ -16,6 +16,7 @@
   <script>
     (function (window) {
       window.url = {
+        // master: "http://172.16.7.99:8090/sharedportal"
         // master: "http://172.16.0.115:8090/sharedportal"
         // master: "http://172.16.7.95:8090/sharedportal"
         //  master: "http://192.168.13.230:8090/sharedportal"
