--- a/sources/catalog/view.html
+++ b/sources/catalog/view.html
@@ -14,4 +14,20 @@
       <li><a v-bind:href="sysObj.xuanfu3" class="share-link" target="_blank"><img src="../assets/ico/theme.png" /></a><p>主题</p></li>
     </ul>
   </section>   -->
+  <section class="float-profile ">
+    <div class="ruanzhong">
+    <a href="javascript:void(0);" @click="getLoginUserInfo(jumpSystem.jump_directory)" class="share-link">
+        <img src="../assets/dashboard/tool1.png" /><p>目录管理</p></a>
+        <ul class="other-link">
+          <li @click="getLoginUserInfo(jumpSystem.jump_service)"><a href="javascript:void(0)" class="share-link">
+            <img src="../assets/dashboard/tool2.png" /></a>
+            <p>服务封装</p>
+          </li>
+          <li @click="getLoginUserInfo(jumpSystem.jump_drap)"><a href="javascript:void(0)" class="share-link">
+            <img src="../assets/dashboard/tool3.png" /></a>
+            <p>资源梳理</p>
+          </li>
+        </ul>
+    </div>
+  </section>
 </main>
