业务目录 服务对象过滤

--- a/sources/catalog/depCardingCatalog/department-resources/view.html
+++ b/sources/catalog/depCardingCatalog/department-resources/view.html
@@ -14,7 +14,7 @@
         <el-button slot="append" icon="search" @click="handleSearch">搜索</el-button>
       </el-input>
     </div>
-     <!-- <div class="filters">
+      <div class="filters">
         <div class="selection">
           <label for="service">  
 			        服务对象：
@@ -24,7 +24,7 @@
             </el-option>
           </el-select>
         </div>
-      </div> -->
+      </div> 
   </div>
  
   <!-- <div :style="showStyle" ref="business"> -->
