--- a/sources/login/view.html
+++ b/sources/login/view.html
@@ -27,7 +27,7 @@
     </div>
     <span v-show="errorShow" class="error">{{errorMessage}}</span>
     <div class="inputdiv">
-      <button class="login_subtn" :disabled="disable" type="button" @click="onSubmit()">登&emsp;录</button>
+      <el-button class="login_subtn" :disabled="disable" type="button" @click="onSubmit()">登&emsp;录</el-button>
     </div>
   </form>
 </main>
