数据目录动态资源目录路由设置bug

--- a/sources/admin/container/applyList/view.html
+++ b/sources/admin/container/applyList/view.html
@@ -10,7 +10,7 @@
     </div>
     <div class="filter">
       <div class="search">
-        <el-input placeholder="请输入信息资源名称" icon="search" v-model="search_inp" :on-icon-click="searchClick">
+        <el-input placeholder="请输入信息资源名称/目录/理由" icon="search" v-model="search_inp" :on-icon-click="searchClick">
         </el-input>
       </div>
       <div class="select">
