--- a/sources/admin/container/bug/view.html
+++ b/sources/admin/container/bug/view.html
@@ -7,7 +7,7 @@
   </div>
   <div class="filter">
     <div class="search">
-      <el-input placeholder="请输入纠错目录" icon="search" v-model="search_inp" :on-icon-click="searchClick">
+      <el-input placeholder="请输入纠错目录/内容" icon="search" v-model="search_inp" :on-icon-click="searchClick">
       </el-input>
     </div>
   </div>
