--- a/sources/interaction/container/hotMessage/view.html
+++ b/sources/interaction/container/hotMessage/view.html
@@ -198,7 +198,8 @@
     </el-tabs>
   </nav>
   <div class="search">
-    <el-input placeholder="请输入名称" icon="search" v-model='inp_seach' :on-icon-click="searchClick">
-    </el-input>
+      <el-input placeholder="请输入名称" v-model="inp_seach">
+          <el-button slot="append" icon="search" @click="searchClick">搜索</el-button>
+        </el-input>
   </div>
 </main>
